--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.zalando.logbook: TRACE
+logging.level.org.zalando.logbook= TRACE
 spring.sql.init.mode=ALWAYS
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:filmorate
@@ -8,3 +8,9 @@ spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+spring.datasource.hikari.allow-pool-suspension=true
+spring.jmx.enabled=false
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=10s
